task-86405-fixed banner form language wrap issue

--- a/scss/frontend/pages/_blog.scss
+++ b/scss/frontend/pages/_blog.scss
@@ -990,5 +990,6 @@
         position: static;
         background: var(--color-gray-400);
         transform: none !important;
+        padding: theme('padding.4');
     }
 }
